[gd_scene load_steps=3 format=3 uid="uid://cleqg3u2nadx4"]

[ext_resource type="Script" path="res://assets/vr/scenes/pause/function_pause.gd" id="1_0wtjg"]

[sub_resource type="LabelSettings" id="LabelSettings_4cfq8"]
font_size = 125

[node name="FunctionPause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wtjg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -736.0
offset_top = -406.0
offset_right = 736.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 27
alignment = 1

[node name="Greeting" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Greetings!"
label_settings = SubResource("LabelSettings_4cfq8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 42
alignment = 1

[node name="Morning" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Morning"

[node name="Evening" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Evening"

[node name="Night" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Night
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Morning" to="." method="_on_morning_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Evening" to="." method="_on_evening_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Night" to="." method="_on_night_pressed"]
